fixed some layout issues on scatterplot and PR and VI city stats; added another context note

--- a/scss/components/cityStatsComponent.scss
+++ b/scss/components/cityStatsComponent.scss
@@ -163,8 +163,7 @@
       &.count {
         font-size: 12px;
 
-        &.poc,
-        &.territory {
+        &.poc {
           text-anchor: end;
         }
       }
